--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sham-ui-jest-preprocessor",
-  "version": "2.0.10",
+  "version": "2.0.11",
   "description": "",
   "main": "index.js",
   "repository": {
@@ -20,7 +20,8 @@
     "babel-jest": "^23.4.2"
   },
   "dependencies": {
-    "sham-ui-templates": "2.1.1"
+    "sham-ui-templates": "2.1.1",
+    "source-map": "^0.5.6"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
