--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sham-ui-jest-preprocessor",
-  "version": "2.0.12",
+  "version": "3.0.0",
   "description": "",
   "main": "index.js",
   "repository": {
@@ -20,7 +20,7 @@
     "babel-jest": "^23.4.2"
   },
   "dependencies": {
-    "sham-ui-templates": "2.1.2",
+    "sham-ui-templates": "^3.2.0",
     "source-map": "^0.5.6"
   },
   "scripts": {
